k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: springboot-app
  namespace: devops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: springboot-app

  template:
    metadata:
      labels:
        app: springboot-app

    spec:
      containers:
        - name: springboot-container

          image: IMAGE_PLACEHOLDER

          ports:
            - containerPort: 8080
