k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-springboot-project-service
  labels:
    app: devops-springboot-project
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: devops-springboot-project
